[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/bosses/generalBossStuff/HealthOrb.gd" type="Script" id=1]
[ext_resource path="res://src/enemy/baseEnemy/ExplosionParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/audio/sfx/explosions/explode3.wav" type="AudioStream" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )
metallic = 1.0
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 4.52
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 2.0
height = 4.0
radial_segments = 10
rings = 12

[sub_resource type="SphereShape" id=3]
radius = 2.0

[node name="HealthOrb" type="Area" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Particles" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 50.0
pitch_scale = 1.84

[connection signal="area_entered" from="." to="." method="_on_HealthOrb_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_HealthOrb_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
